- phoromatic: Allow downloading results as PDF
- phoromatic: Allow disabling new account registration by setting custom string via rootadmin's config page
- phoromatic: Allow setting a main page message string to show users once logging into their account, via rootadmin's config page
- phoromatic: Don't show idling systems on the dashboard
- phoromatic: Add IP ping test to system claim page

Phoronix Test Suite 5.6 Milestone 1
13 January 2015

- pts-core: Add "short" display mode
- pts-core: Add stress-run command to allow for concurrent stress testing / burn-in / torture testing
- pts-core: Add TOTAL_LOOP_TIME support to stress-run
- pts-core: Add TOTAL_LOOP_TIME=infinite support to stress-run for testing in an infinite loop
- pts-core: Add support for libframetime output result parsing
- phoromatic: Initial commit of basic tracker page
- phoromatic: Better recovery of existing Phoromatic accounts on reloaded systems where the machine self ID changed
- timed_screenshot: Fix for crash when PHP GD missing

Phoronix Test Suite 5.4.1-Lipki
23 December 2014

- pts-core: Update AppData and systemd service files
- pts-core: Add csv-dump-frame-latencies support to result parser
- phoromatic: Improve formatting of result strings when merging random result files together
- phoromatic: Add enterprise-setup sub-command
- phoromatic: Attempt to detect and report IP address next to requested MAC address claim on the system claim page

Phoronix Test Suite 5.4.0-Lipki
9 December 2014

- phoromatic: Main page update
- phoromatic: Various updates

Phoronix Test Suite 5.4 Milestone 7
1 December 2014

- pts-core: Improve MAC address acquisition on systems with multiple NICs
- phoromatic: Add add_new_users_to_account option for adding new users automatically to existing account
- phoromatic: Allow changing the admin level for users by the main administrator from the Users page
- phoromatic: Report systems MAC address from the systems page